# efficient-cpp

./: .clang-format  .gitignore  00_substring_sort_prep.C  01_superscalar.C  02_dynamic_cast.C  BM_sqrt_pow.C  BUILD_X86_ARM.md  CMakeLists.txt  EXTRA.md  PERFORMANCE_MEASUREMENT.md  README.md  avx_test.cpp  bitcount.C  bitcount_BM.cpp  bitcount_avx.cpp  branch_clamp.cpp  branches.cpp  clocks.cpp  compare.C  example.C  fast_pythagorean.C  fast_pythagorean.h  fast_pythagorean.md  fast_pythagorean_avx.C  flying_bird.cpp  frexp_test.cpp  libbitcount.C  libbitcount.h  ndim_vector.C  rational.cpp  reinterp.cpp  repeating_series.C  struct_init.C  threading.cpp
.github/workflows/: cmake-single-platform.yml
design-patterns/: 01_cast.C  02_dynamic_cast.C  flying_bird.cpp
mpi/: mpi.cpp
simde_sandbox/: avx512_add.cpp
